--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
 <li>
 <p style="margin-bottom: 1em;">「A raw disk is created at ...」みたいな感じで出れば成功です。</p>
 </li>
+<div id="mobile_vendor-ww-monthly-202304-202305" width="600" height="400" style="width:600px; height: 400px;"></div><!-- You may change the values of width and height above to resize the chart --><p>Source: <a href="https://gs.statcounter.com/vendor-market-share/mobile/worldwide/#monthly-202304-202305-bar">StatCounter Global Stats - Device Vendor Market Share</a></p><script type="text/javascript" src="https://www.statcounter.com/js/fusioncharts.js"></script><script type="text/javascript" src="https://gs.statcounter.com/chart.php?mobile_vendor-ww-monthly-202304-202305&chartWidth=600"></script>
 </ol></main><footer><small class="copyright no-select">© 2020-2023 BlogBooks Library. All Rights Reserved.</small></footer>
 <next-route-announcer style="position: absolute;"><template shadowmode="open"><div aria-live="assertive" id="__next-route-announcer__" role="alert" style="position: absolute; border: 0px; height: 1px; margin: -1px; padding: 0px; width: 1px; clip: rect(0px, 0px, 0px, 0px); overflow: hidden; white-space: nowrap; overflow-wrap: normal;">ブロック解除 - 全フィルタリング</div></template></next-route-announcer></body></html>
